rules.v4
# Generated by xtables-save v1.8.2 on Thu Dec 21 17:26:28 2023
*filter
:INPUT DROP [6689352:698581842]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
:ip-whitelist - [0:0]
:outgoing - [0:0]
:states - [0:0]
:fivem - [0:0]
:web - [0:0]
:mc - [0:0]
:inputs - [0:0]
:redirects - [0:0]
:outstates - [0:0]
:outputs - [0:0]
:dns - [0:0]
:rate-limit - [0:0]
:rate-limit-udp - [0:0]
:syn-limit - [0:0]
:rate-limit-ddos - [0:0]
:mysql - [0:0]
:turn - [0:0]
:military - [0:0]
:country-block - [0:0]
:country-allow - [0:0]
:packet-len - [0:0]
:syn-limit2 - [0:0]
:con-limit - [0:0]
:knock - [0:0]
:fivem-flag - [0:0]
:sus-syn - [0:0]
:spoof - [0:0]
:red-button - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j inputs
-A INPUT -j redirects
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j states
-A OUTPUT -j outgoing
-A ip-whitelist -j DROP
-A outgoing -j outstates
-A outgoing -j outputs
-A states -p tcp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A states -p udp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A states -p icmp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A states -j RETURN
-A fivem -j ACCEPT
-A web -j ACCEPT
-A mc -j ACCEPT
-A inputs -p udp -m udp --sport 389 -j DROP
-A inputs -p udp -m udp --dport 1900 -j DROP
-A inputs -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A inputs -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A inputs -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A inputs -m conntrack --ctstate INVALID -j DROP
-A inputs -j RETURN
-A redirects -p tcp -m tcp --dport 4224 -m state --state NEW -m recent --rcheck --seconds 30 --hitcount 4 --name military4 --mask 255.255.255.255 --rsource -j knock
-A redirects -p tcp -m tcp --dport 30120 -m state --state NEW -m recent --rcheck --seconds 30 --hitcount 4 --name military --mask 255.255.255.255 --rsource -j knock
-A redirects -p udp -m udp --dport 4224 -j fivem
-A redirects -p tcp -m tcp --dport 4224 -j fivem
-A redirects -p udp -m udp --dport 25565 -j mc
-A redirects -p tcp -m tcp --dport 25565 -j mc
-A redirects -p udp -m udp --dport 4044 -j fivem
-A redirects -p tcp -m tcp --dport 4044 -j fivem
-A redirects -p tcp -m tcp --dport 4242 -j web
-A redirects -p udp -m udp --dport 30120 -j fivem
-A redirects -p tcp -m tcp --dport 22 -j ip-whitelist
-A redirects -p udp -m udp --dport 53 -j dns
-A redirects -p tcp -m tcp --dport 53 -j dns
-A redirects -p udp -m udp --dport 4222 -j ACCEPT
-A redirects -p udp -m udp --dport 420 -j military
-A redirects -p tcp -m tcp --dport 444 -j ip-whitelist
-A redirects -p tcp -m tcp --dport 420 -j military
-A redirects -p tcp -m tcp --dport 4222 -j ACCEPT
-A redirects -p udp -m udp --dport 123 -j dns
-A redirects -p tcp -m tcp --dport 30120 -j fivem
-A redirects -p udp -m udp --dport 30120 -j fivem
-A redirects -p udp -m udp --dport 4200 -j fivem
-A redirects -p tcp -m tcp --dport 3306 -j mysql
-A redirects -p tcp -m tcp --dport 4200 -j fivem
-A redirects -p tcp -m tcp --dport 123 -j dns
-A redirects -p tcp -m tcp --dport 80 -j web
-A redirects -p tcp -m tcp --dport 443 -j web
-A redirects -j RETURN
-A outstates -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG RST,ACK -j DROP
-A outstates -p icmp -j ACCEPT
-A outstates -j RETURN
-A outputs -p tcp -m tcp --sport 3306 -j ACCEPT
-A outputs -p tcp -m tcp --dport 3306 -j ACCEPT
-A outputs -p tcp -m tcp --dport 53 -j ACCEPT
-A outputs -p udp -m udp --dport 53 -j ACCEPT
-A outputs -p udp -m udp --dport 123 -j ACCEPT
-A outputs -p tcp -m tcp --dport 123 -j ACCEPT
-A outputs -p tcp -m tcp --dport 22 -j ACCEPT
-A outputs -p tcp -m tcp --dport 80 -j ACCEPT
-A outputs -p tcp -m tcp --dport 443 -j ACCEPT
-A outputs -j RETURN
-A dns -j ACCEPT
-A rate-limit -m limit --limit 50/sec --limit-burst 20 -j RETURN
-A rate-limit -j DROP
-A rate-limit-udp -m limit --limit 181/sec -j RETURN
-A rate-limit-udp -j DROP
-A syn-limit -m limit --limit 140/sec --limit-burst 140 -j RETURN
-A syn-limit -j DROP
-A rate-limit-ddos -m limit --limit 20/sec -j DROP
-A mysql -j ACCEPT
-A turn -j ACCEPT
-A military -j ACCEPT
-A packet-len -p udp -m length --length 2:300 -j RETURN
-A packet-len -j DROP
-A syn-limit2 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j RETURN
-A syn-limit2 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A con-limit -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 50 --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with icmp-port-unreachable
-A con-limit -j ACCEPT
-A knock -m recent --remove --name knock --mask 255.255.255.255 --rsource 
-A knock -m recent --set --name knock --mask 255.255.255.255 --rsource -j DROP
-A knock -j RETURN
-A knock -j DROP
-A fivem-flag -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A fivem-flag -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A fivem-flag -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A fivem-flag -p tcp -m tcp --tcp-flags FIN,PSH,URG FIN,PSH,URG -j DROP
-A fivem-flag -j RETURN
-A sus-syn -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m recent --set --name syn_flood --mask 255.255.255.255 --rsource 
-A sus-syn -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m recent --update --seconds 1 --hitcount 10 --name syn_flood --mask 255.255.255.255 --rsource -j DROP
-A sus-syn -j RETURN
-A spoof -s 10.0.0.0/8 -i eth0 -j DROP
-A spoof -s 192.168.0.0/16 -i eth0 -j DROP
-A spoof -j RETURN
-A red-button -j spoof
-A red-button -j sus-syn
-A red-button -j syn-limit2
-A red-button -j fivem-flag
-A red-button -j rate-limit
-A red-button -j RETURN
COMMIT
# Completed on Thu Dec 21 17:26:28 2023
# Generated by xtables-save v1.8.2 on Thu Dec 21 17:26:28 2023
*nat
:PREROUTING ACCEPT [23310052:2855781929]
:INPUT ACCEPT [143633:8147321]
:POSTROUTING ACCEPT [527:37858]
:OUTPUT ACCEPT [527:37858]
-A PREROUTING -p tcp -m tcp --dport 421 -j REDIRECT --to-ports 30120
-A PREROUTING -p udp -m udp --dport 421 -j REDIRECT --to-ports 30120
-A PREROUTING -p udp -m udp --dport 421 -j REDIRECT --to-ports 30120
-A PREROUTING -p tcp -m tcp --dport 421 -j REDIRECT --to-ports 30120
COMMIT
# Completed on Thu Dec 21 17:26:28 2023
# Generated by xtables-save v1.8.2 on Thu Dec 21 17:26:28 2023
*mangle
:PREROUTING ACCEPT [26667201:3482599726]
:INPUT ACCEPT [16955860:2807265668]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [10694757:50079351299]
:POSTROUTING ACCEPT [10694757:50079351299]
COMMIT
# Completed on Thu Dec 21 17:26:28 2023
# Generated by xtables-save v1.8.2 on Thu Dec 21 17:26:28 2023
*raw
:PREROUTING ACCEPT [26667201:3482599726]
:OUTPUT ACCEPT [10694757:50079351299]
COMMIT
# Completed on Thu Dec 21 17:26:28 2023
